More alignment fixes

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -603,7 +603,7 @@ background-size: cover;
     margin: 0 auto;
     line-height: 0;
     padding-top: 10px;
-    padding-right: 20px;
+    padding-right: 23.5px;
 }
 
 .back-button {
@@ -729,7 +729,7 @@ background-size: cover;
 
 /* The details of your blog. Defined in ghost/settings/ */
 .page-title {
-    margin: 10px 5px 5px 13px;
+    margin: 10px 2px 5px 16px;
     font-size: 5rem;
     letter-spacing: -1px;
     font-weight: 700;
@@ -1544,7 +1544,7 @@ margin-right: 0.2em;
     .page-description {
         font-size: 1.8rem;
         line-height: 1.5em;
-        margin: 0px 6px 0px 8px;
+        margin: 0px 6px 0px 7px;
     }
 
     .post {
